# polony-counting

./: .flake8  .gitignore  404.html  CHANGELOG.md  Makefile  README.md  codecov.yml  explanation.html  how-to-guides.html  index.html  mkdocs.yml  pyproject.toml  reference.html  tutorials.html
.github/workflows/: lint.yml  orchestrator.yml  pages.yml  release.yml  test.yml
checkpoints/: test.pth
docs/: explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
resources/dataset_files/: path_dict.json
scripts/: fix_script.py
search/: search_index.json
src/config/: config.yaml
src/data/: make_dataset.py  utils.py
src/models/: models.py  predict_model.py  train_model.py  utils.py
src/polony/: __init__.py
src/polony/backend/: server.py
src/polony/config/: config.yaml
src/polony/data/: __init__.py  make_dataset.py  utils.py
src/polony/efficacy/: polony_to_phage.py
src/polony/models/: __init__.py  models.py  predict_model.py  train_model.py  utils.py
tests/: test_model.py
tests/test_data/: test_make_dataset.py  test_utils.py
tests/test_models/: test_models.py  test_predict_model.py  test_utils.py
