[tool.poetry]
name = "polony-counting"
version = "0.1.0"
description = ""
authors = ["Kirill Pushkarev <kirillpush@yandex.ru>"]
readme = "README.md"
packages = [
 { include = "*", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2"
gdown = "^4.7.1"
roifile = "^2023.5.12"
wandb = "^0.15.5"
numpy = "^1.23.0"
opencv-python-headless = "^4.8.0"
scipy = "^1.7.0"
torchvision = "^0.15.0"
Pillow = "^9.5.0"
matplotlib = "^3.7.0"
h5py = "^3.9.0"
argparse = "^1.4.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = ['docs']

[tool.flake8]
max-line-length = 79
ignore = ["E203", "W503", "C901"]

[tool.poetry.scripts]
fix = "poetry_fix:main"
